--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A web site that tells you if your location is cold enough to store beer outside",
   "main": "index.js",
   "scripts": {
+    "start": "npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "live-server --ignore=.git/**/* --port=3000 --https=./node_modules/live-server-https",
+    "serve": "alive-server --ignore=.git/**/* --port=3000 --https=./node_modules/live-server-https",
     "lint": "eslint index.js"
   },
   "repository": {
@@ -16,16 +17,16 @@
   "license": "MIT",
   "homepage": "https://coldout.beer",
   "devDependencies": {
-    "eslint": "^8.46.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "live-server": "^1.2.2",
+    "eslint-plugin-prettier": "^5.0.1",
+    "alive-server": "^1.3.0",
     "live-server-https": "0.0.2",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.3"
   },
   "dependencies": {
-    "@types/jquery": "^3.5.16"
+    "@types/jquery": "^3.5.25"
   }
 }
