--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cold-enough-for-beer",
   "version": "1.0.0",
+  "type":"module",
   "description": "A web site that tells you if your location is cold enough to store beer outside",
   "main": "index.js",
   "scripts": {
@@ -18,15 +19,14 @@
   "homepage": "https://coldout.beer",
   "devDependencies": {
     "alive-server": "^1.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "live-server-https": "0.0.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.3.3"
   },
   "dependencies": {
-    "@types/jquery": "^3.5.29"
+    "@types/jquery": "^3.5.30"
   }
 }
