--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ styled-system
 
 # TypeScript
 *.tsbuildinfo
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
